--- a/api/collection/models/collection.settings.json
+++ b/api/collection/models/collection.settings.json
@@ -1,8 +1,8 @@
 {
-  "kind": "singleType",
-  "collectionName": "single_types",
+  "kind": "collectionType",
+  "collectionName": "collection_s",
   "info": {
-    "name": "single type"
+    "name": "collection "
   },
   "options": {
     "increments": true,
